--- a/model.ipynb
+++ b/model.ipynb
@@ -19,23 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting absl-py\n",
-      "  Downloading absl_py-0.11.0-py3-none-any.whl (127 kB)\n",
-      "\u001b[K     |████████████████████████████████| 127 kB 915 kB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied, skipping upgrade: six in /Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages (from absl-py) (1.14.0)\n",
-      "Installing collected packages: absl-py\n",
-      "  Attempting uninstall: absl-py\n",
-      "    Found existing installation: absl-py 0.10.0\n",
-      "    Uninstalling absl-py-0.10.0:\n",
-      "      Successfully uninstalled absl-py-0.10.0\n",
-      "Successfully installed absl-py-0.11.0\n",
+      "Requirement already up-to-date: absl-py in /Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages (0.11.0)\n",
+      "Requirement already satisfied, skipping upgrade: six in /Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages (from absl-py) (1.14.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -46,40 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#data \n",
     "import pandas as pd\n",
@@ -92,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +261,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +470,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +516,7 @@
        "(60000, 784)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +536,7 @@
        "(60000,)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +556,7 @@
        "(10000, 784)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +576,7 @@
        "(10000,)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -676,31 +637,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Reshape image train array and image test array\n",
-    "image_train = image_train.reshape(image_train.shape[0],*(28,28,1))\n",
-    "image_test = image_test.reshape(image_test.shape[0],*(28,28,1))\n",
-    "image_validate = image_validate.reshape(image_validate.shape[0],*(28,28,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Users/Qianqian/opt/anaconda3/lib/python3.7/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
-     ]
-    }
-   ],
    "source": [
     "#Define the model\n",
     "cnn_model = tf.keras.Sequential([\n",
@@ -715,7 +654,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reshape image train array and image test array\n",
+    "image_train = image_train.reshape(image_train.shape[0],*(28,28,1))\n",
+    "image_test = image_test.reshape(image_test.shape[0],*(28,28,1))\n",
+    "image_validate = image_validate.reshape(image_validate.shape[0],*(28,28,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,13 +800,7 @@
       "48000/48000 [==============================] - 11s 230us/sample - loss: 0.2725 - acc: 0.9037 - val_loss: 0.2898 - val_acc: 0.8995\n",
       "Epoch 57/75\n",
       "48000/48000 [==============================] - 11s 230us/sample - loss: 0.2707 - acc: 0.9044 - val_loss: 0.2881 - val_acc: 0.9007\n",
-      "Epoch 58/75\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 58/75\n",
       "48000/48000 [==============================] - 11s 229us/sample - loss: 0.2689 - acc: 0.9051 - val_loss: 0.2861 - val_acc: 0.9007\n",
       "Epoch 59/75\n",
       "48000/48000 [==============================] - 11s 230us/sample - loss: 0.2637 - acc: 0.9073 - val_loss: 0.2866 - val_acc: 0.8995\n",
@@ -970,56 +915,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle"
+    "cnn_model.save(\"cnn_model\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can't pickle _thread.RLock objects",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-55815fc84e7e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcnn_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'model.pkl'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'model.pkl'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can't pickle _thread.RLock objects"
-     ]
-    }
-   ],
-   "source": [
-    "pickle.dump(cnn_model, open('model.pkl','wb'))\n",
-    "\n",
-    "model = pickle.load(open('model.pkl','rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
